syntax = "proto3";

package pb;

service Whoami {
  rpc Whoami(Request) returns (Response) {}
}

message Request {
}

message Response {
  string server_name = 1;
  string client_ip = 2;
  string client_issuer = 3;
  string client_subject = 4;
}
